--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
                 <div class="flex justify-content-between">
                     <div>
                         <div class="mb-3" [ngClass]="vehicle.textColorClass + ' text-5xl'">{{ vehicle.count }}</div>
-                        <span style="font-family: 'Urbanist', sans-serif;" class="block text-2xl text-500 font-bold">{{ vehicle.label }}</span>
+                        <span class="block text-2xl text-500 font-bold">{{ vehicle.label }}</span>
                     </div>
                     <div class="flex align-items-center justify-content-center"
                         [ngClass]="vehicle.bgColorClass + ' border-round'" style="width:5rem;height:5rem">
@@ -24,7 +24,7 @@
             <p-panel styleClass="shadow-3 border-round-3xl">
 
                 <ng-template pTemplate="header">
-                    <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Total Inventory</span>
+                    <span class="text-3xl font-bold" >Total Inventory</span>
                 </ng-template>
                 
                 <ng-template pTemplate="icons">
@@ -36,7 +36,7 @@
                             <div class="flex justify-content-between">
                                 <div>
                                     <div class="mb-3" [ngClass]="'text-green-500' + ' text-5xl'">123456</div>
-                                    <span style="font-family: 'Urbanist', sans-serif;" class="block text-500 font-bold text-2xl">Fitted</span>
+                                    <span  class="block text-500 font-bold text-2xl">Fitted</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
                                     [ngClass]="'bg-green-100' + ' border-round'" style="width:5rem;height:5rem">
@@ -53,7 +53,7 @@
                             <div class="flex justify-content-between">
                                 <div>
                                     <div class="mb-3" [ngClass]="'text-yellow-500' + ' text-5xl'">123456</div>
-                                    <span style="font-family: 'Urbanist', sans-serif;" class="block text-500 font-bold text-2xl">Balanced</span>
+                                    <span  class="block text-500 font-bold text-2xl">Balanced</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
                                     [ngClass]="'bg-yellow-100' + ' border-round'" style="width:5rem;height:5rem">
@@ -71,7 +71,7 @@
         <div class="col-12 md:col-6 lg:col-5">
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
-                    <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Total Complaint Lodge</span>
+                    <span class="text-3xl font-bold" >Total Complaint Lodge</span>
                 </ng-template>
                 <ng-template pTemplate="icons">
                   <span class="text-3xl text-indigo-500 font-bold">{{ totalComplaints || 1000 }}</span>
@@ -82,7 +82,7 @@
                       <div class="flex justify-content-between">
                         <div>
                           <div class="mb-3" [ngClass]="'text-' + stat.colorClass + '-500 text-5xl'">{{ stat.count }}</div>
-                          <span style="font-family: 'Urbanist', sans-serif;" class="block text-500 font-bold text-2xl">{{ stat.status }}</span>
+                          <span  class="block text-500 font-bold text-2xl">{{ stat.status }}</span>
                         </div>
                         <div class="flex align-items-center justify-content-center"
                              [ngClass]="'bg-' + stat.colorClass + '-100 border-round'" style="width:5rem;height:5rem">
@@ -100,18 +100,29 @@
               
         </div>
         <div class="col-12 md:col-6 lg:col-2">
-            <div class="p-3 border-round bg-red-500">
+            <!-- <div class="p-3 border-round bg-red-500">
                 <div class="flex justify-content-between">
                     <div class="flex align-items-center justify-content-center" [ngClass]="' border-circle'"
                         style="width:14rem;height:16rem">
-                        <span style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-white' + ' text-7xl font-bold'">SOS</span>
+                        <span  [ngClass]="'text-white' + ' text-7xl font-bold'">SOS</span>
                     </div>
                     <div class="flex align-items-center justify-content-center" [ngClass]="'bg-white' + ' border-round'"
                         style="width:14rem;height:16rem">
-                        <span  style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-red-500 font-bold' + ' text-7xl'">1000</span>
+                        <span   [ngClass]="'text-red-500 font-bold' + ' text-7xl'">1000</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
+
+            <p-panel styleClass="shadow-3 border-round-3xl">
+                <ng-template pTemplate="header">
+                    <span class="text-3xl font-bold">SOS</span>
+                </ng-template>
+                <div class="bg-red-500 shadow-2 p-6 border-round">
+                    <div class="flex justify-content-center align-items-center">
+                            <span [ngClass]="'text-white font-bold' + ' text-7xl'">1000</span>
+                    </div>
+                </div>
+            </p-panel>
         </div>
     </div>
 
@@ -121,7 +132,7 @@
         <div class="col-12 md:col-6 lg:col-5">
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
-                    <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Vehicle Type Wise Installation</span>
+                    <span class="text-3xl font-bold" >Vehicle Type Wise Installation</span>
                 </ng-template>
                 <ng-template pTemplate="icons">
                     <button class="p-panel-header-icon p-link mr-2">
@@ -130,13 +141,13 @@
                 </ng-template>
                 <div class="grid">
                     <div class="col-12 md:col-6 lg:col-6">
-                        <h2 style="font-family: 'Urbanist', sans-serif;">Total Vehicles</h2>
+                        <h2 >Total Vehicles</h2>
                         <div class="flex justify-content-center align-items-center">
                             <p-knob [(ngModel)]="totalvehicleInstallation" [readonly]="true" [size]="300" [strokeWidth]="10" />
                         </div>
                     </div>
                     <div class="col-12 md:col-6 lg:col-6">
-                        <div style="height: 570px;" class="p-5 overflow-auto">
+                        <div style="height: 480px;" class="p-5 overflow-auto">
                             @for (vehicle of vehicleInstallationTypes; track $index) {
                                 <div class="col-12 md:col-12 lg:col-12">
                                     <div class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between">
@@ -161,15 +172,36 @@
         </div>
         <div class="col-12 md:col-7 lg:col-7">
             <div class="grid">
-                <div class="col-12 lg:col-5">
+                <!-- <div class="col-12 lg:col-5">
                     <p-panel styleClass="shadow-3 border-round-3xl">
                         <ng-template pTemplate="header">
-                            <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Renewal Status</span>
+                            <span class="text-3xl font-bold" >Renewal Status</span>
                         </ng-template>
                             <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart"
                                 [labels]="chartOptions.labels" [fill]="chartOptions.fill" [colors]="chartOptions.colors"
                                 [dataLabels]="chartOptions.dataLabels"  [legend]="chartOptions.legend"
                                 [responsive]="chartOptions.responsive"></apx-chart>
+                    </p-panel>
+                </div> -->
+
+                <div class="col-12 lg:col-5">
+                    <p-panel styleClass="shadow-3 border-round-3xl">
+                        <ng-template pTemplate="header">
+                            <span class="text-3xl font-bold" >Renewal Status</span>
+                        </ng-template>
+                        @for (item of renewalStatus; track $index) {
+                            <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 border-round ' + item.bgColor">
+                               
+                                    <div class="flex justify-content-between pl-2 pr-2">
+                                        <div class="flex align-items-center justify-content-center">
+                                            <div  [ngClass]="'text-green-500 text-white font-bold' + ' text-2xl'">{{item.key}}</div>
+                                        </div>
+                                        <div class="flex align-items-center justify-content-center">
+                                            <div class="text-green-500 text-white text-5xl">{{item.value}}</div>
+                                        </div>
+                                    </div>
+                            </div>
+                        }
                     </p-panel>
                 </div>
 
@@ -178,37 +210,35 @@
                 <div class="col-12 lg:col-4">
                     <p-panel styleClass="shadow-3 border-round-3xl">
                         <ng-template pTemplate="header">
-                            <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Total Registration</span>
+                            <span class="text-3xl font-bold" >Total Registration</span>
                         </ng-template>
-                        <div class="p-4">
-                            @for (item of totalRegistrationObject; track $index) {
-                                <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 ' + item.bgColor">
-                                    <div class="p-3 border-round">
-                                        <div class="flex justify-content-between">
+                            @for (item of totalRegistration; track $index) {
+                                <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 border-round ' + item.bgColor">
+                                   
+                                        <div class="flex justify-content-between  pl-2 pr-2">
                                             <div class="flex align-items-center justify-content-center">
-                                                <div style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-green-500 text-white' + ' text-2xl'">{{item.key}}</div>
+                                                <div  [ngClass]="'text-green-500 text-white font-bold' + ' text-2xl'">{{item.key}}</div>
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
-                                                <div class="text-green-500 text-white text-5xl font-bold ">{{item.value}}</div>
+                                                <div class="text-green-500 text-white text-5xl ">{{item.value}}</div>
                                             </div>
                                         </div>
-                                    </div>
                                 </div>
                             }
-                        </div>
                     </p-panel>
                 </div>
 
                 <div class="col-12 lg:col-3">
                     <p-panel styleClass="shadow-3 border-round-3xl">
                         <ng-template pTemplate="header">
-                            <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Alert</span>
+                            <span class="text-3xl font-bold" >Alert</span>
                         </ng-template>
-                        <div style="height: 168px;" class="p-3 border-round bg-yellow-500">
-                                <div class="flex justify-content-center align-items-center">
-                                    <span style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-white font-bold' + ' text-6xl'">1000</span>
-                                </div>
+                        <div class="p-3 border-round bg-yellow-500">
+                            <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
+                                <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">1000</span>
+                            </div>   
                         </div>
+                        
                     </p-panel>
                 </div>
                 
@@ -216,7 +246,7 @@
                     <div class="grid">
                         <div class="col-12 md:col-6 lg:col-12">
                             <div class="surface-card shadow-2 border-round">
-                                <div style="height: 400px;" leaflet (leafletMapReady)="onMapReady($event)"
+                                <div style="height: 354px;" leaflet (leafletMapReady)="onMapReady($event)"
                                     [leafletOptions]="leafletOptions">
                                 </div>
                             </div>
