--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -1,6 +1,6 @@
 <p-dialog [closable]="false" [(visible)]="visible" [style]="{ width: width }"
     header="{{ (isEditing ? 'Update ' : ' ') + header + ' Details' }}" [modal]="modal" styleClass="{{ styleClass }}"
-    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
+    [breakpoints]="{ '2500px': '50vw','1600px': '60vw','1199px': '75vw', '575px': '90vw' }">
     <ng-template pTemplate="content">
         @if(!isStepForm) {
         <div class="formgrid grid mt-3">
@@ -24,7 +24,7 @@
                 @switch (field.type) {
                 @case ('text') {
                 <ng-container>
-                    <input class="w-full" (keyup)="onInputChange($event, field)" type="text" pInputText
+                    <input class="w-full" (keyup)="onInputChange($event, field)" type="text" pInputText [disabled]="field?.disabled || false"
                         id="{{ field.name }}" [(ngModel)]="data[field.name]" [required]="field.validation" />
                 </ng-container>
                 }
