--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -220,7 +220,7 @@
                                                 <div  [ngClass]="'text-green-500 text-white font-bold' + ' text-2xl'">{{item.key}}</div>
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
-                                                <div class="text-green-500 text-white text-5xl ">{{item.value}}</div>
+                                                <div class="text-green-500 text-white text-5xl ">0</div>
                                             </div>
                                         </div>
                                 </div>
