Forgot Pass In progress

--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="flex align-items-center min-h-screen justify-content-center">
-    <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-8 xl:w-5">
+    <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-8 xl:w-4">
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
                 <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
@@ -8,42 +8,48 @@
         </div>
 
         <div>
-            <p-stepper>
+            <p-stepper [linear]="true">
                 <p-stepperPanel header="Header I">
                     <ng-template pTemplate="content" let-nextCallback="nextCallback">
                         <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
                             <div class="text-center mt-3 mb-3 text-xl font-semibold">Enter your registered mobile no</div>
                             <div class="field p-fluid">
-                                <p-iconField>
-                                    <p-inputIcon>
-                                        <i class="pi pi-user"></i>
-                                    </p-inputIcon>
-                                    <input [(ngModel)]="mobileNo" pInputText id="mobile_no" type="number" placeholder="Mobile No" />
-                                </p-iconField>
+                                <p-inputNumber [(ngModel)]="mobileNo" mode="decimal" inputId="withoutgrouping" [useGrouping]="false" />
+                               
                             </div>
                         </div>
                         <div class="flex pt-4 justify-content-end">
-                            <p-button [disabled]="!mobileNo" (onClick)="nextCallback.emit()" label="Next" icon="pi pi-arrow-right" iconPos="right" />
+                            <p-button [disabled]="!mobileNo" (onClick)="nextStep(nextCallback,'otp')" label="Next" icon="pi pi-arrow-right" iconPos="right" />
                         </div>
                     </ng-template>
                 </p-stepperPanel>
                 <p-stepperPanel header="Header II">
                     <ng-template pTemplate="content" let-prevCallback="prevCallback" let-nextCallback="nextCallback" let-index="index">
-                        <div class="flex flex-column h-12rem">
-                            <div class="border-2 border-dashed surface-border border-round surface-ground flex-auto flex justify-content-center align-items-center font-medium">
-                                Content II
+                        <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
+                            <div class=" text-center font-bold text-xl mb-2">Authenticate Your Account</div>
+                            <p class=" text-center text-color-secondary block mb-5">Please enter the code sent to your phone.</p>
+                            <div class="field p-fluid">
+                                <p-inputOtp [(ngModel)]="otp" [length]="6" style="gap: 0" [integerOnly]="true">
+                                    <ng-template pTemplate="input" let-token let-events="events" let-index="index">
+                                        <input 
+                                            pInputText
+                                            type="text" 
+                                            [maxLength]="1" 
+                                            (input)="events.input($event)" 
+                                            (keydown)="events.keydown($event)"
+                                            (paste)="events.paste($event)"
+                                            [attr.value]="token" 
+                                            class="custom-otp-input" />
+                                        <div *ngIf="index === 3" class="px-3">
+                                            <i class="pi pi-minus"></i>
+                                        </div>
+                                    </ng-template>
+                                </p-inputOtp>
                             </div>
                         </div>
                         <div class="flex pt-4 justify-content-between">
-                            <p-button 
-                                label="Back" 
-                                icon="pi pi-arrow-left" 
-                                (onClick)="prevCallback.emit()" />
-                            <p-button 
-                                label="Next" 
-                                icon="pi pi-arrow-right" 
-                                iconPos="right" 
-                                (onClick)="nextCallback.emit()" />
+                            <p-button [disabled]="!isResendEnabled" [label]="'Resend Code in ' + remainingTime + ' seconds'" [link]="true" class="p-0"/>
+                            <p-button [disabled]="!otp" label="Submit Code" icon="pi pi-arrow-right"  iconPos="right" (onClick)="nextStep(nextCallback)" />
                         </div>
                     </ng-template>
                 </p-stepperPanel>
@@ -55,10 +61,7 @@
                             </div>
                         </div>
                         <div class="flex pt-4 justify-content-start">
-                            <p-button 
-                                label="Back" 
-                                icon="pi pi-arrow-left" 
-                                (onClick)="prevCallback.emit()" />
+                            <p-button label="Back" icon="pi pi-arrow-left" (onClick)="nextStep(prevCallback)" />
                         </div>
                     </ng-template>
                 </p-stepperPanel>
