Forgot Pass Done

--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="flex align-items-center min-h-screen justify-content-center">
-    <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-8 xl:w-4">
+    <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-8 xl:w-5">
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
                 <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
@@ -48,20 +48,47 @@
                             </div>
                         </div>
                         <div class="flex pt-4 justify-content-between">
-                            <p-button [disabled]="!isResendEnabled" [label]="'Resend Code in ' + remainingTime + ' seconds'" [link]="true" class="p-0"/>
-                            <p-button [disabled]="!otp" label="Submit Code" icon="pi pi-arrow-right"  iconPos="right" (onClick)="nextStep(nextCallback)" />
+                            <p-button (onClick)="resendOtp()" [disabled]="!isResendEnabled" [label]="'Resend Code in ' + remainingTime + ' seconds'" [link]="true" class="p-0"/>
+                            <p-button [disabled]="!otp" label="Submit Code" icon="pi pi-arrow-right"  iconPos="right" (onClick)="nextStep(nextCallback,'verify-otp')" />
                         </div>
                     </ng-template>
                 </p-stepperPanel>
                 <p-stepperPanel header="Header III">
-                    <ng-template pTemplate="content" let-prevCallback="prevCallback" let-index="index">
-                        <div class="flex flex-column h-12rem">
-                            <div class="border-2 border-dashed surface-border border-round surface-ground flex-auto flex justify-content-center align-items-center font-medium">
-                                Content III
+                    <ng-template pTemplate="content" let-nextCallback="nextCallback" let-index="index">
+                        <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
+                            <div class="text-center mt-3 mb-3 text-xl font-semibold">Password</div>
+                            <div class="field p-fluid">
+                                <p-iconField iconPosition="right">
+                                    <input id="Password" placeholder="Enter Password" class="w-full mt-2" required [(ngModel)]="resetPasswordObj.newPassword"
+                                        [type]="isPasswordToggled ? 'text' : 'password'" pInputText (copy)="disableEvent($event)"
+                                        (paste)="disableEvent($event)" (cut)="disableEvent($event)">
+                                    <p-inputIcon (click)="togglePassword()"
+                                        [styleClass]="isPasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
+                                </p-iconField>
+                                <p-iconField iconPosition="right">
+                                    <input id="Password" placeholder="Re-type Password" class="w-full mt-2" required [(ngModel)]="resetPasswordObj.reTypedPassword"
+                                        [type]="isRetypePasswordToggled ? 'text' : 'password'" pInputText (copy)="disableEvent($event)"
+                                        (paste)="disableEvent($event)" (cut)="disableEvent($event)">
+                                    <p-inputIcon (click)="toggleRetypePassword()"
+                                        [styleClass]="isRetypePasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
+                                </p-iconField>
                             </div>
                         </div>
-                        <div class="flex pt-4 justify-content-start">
-                            <p-button label="Back" icon="pi pi-arrow-left" (onClick)="nextStep(prevCallback)" />
+                        <div class="flex pt-4 justify-content-end">
+                            <p-button [disabled]="!(isValid())" label="Reset" icon="pi pi-arrow-right"  iconPos="right" (onClick)="nextStep(nextCallback,'reset-password')" />
+                        </div>
+                    </ng-template>
+                </p-stepperPanel>
+                <p-stepperPanel header="Header IV">
+                    <ng-template pTemplate="content">
+                        <div class="flex flex-column gap-2 mx-auto" style="min-height: 16rem; max-width: 24rem">
+                            <div class="text-center mt-3 mb-3 text-xl font-semibold">Password Reset successfully</div>
+                            <div class="text-center">
+                                <img alt="logo" src="https://primefaces.org/cdn/primeng/images/stepper/content.svg" />
+                            </div>
+                        </div>
+                        <div class="flex pt-4 justify-content-end">
+                            <p-button [routerLink]="['/auth/login']" label="Back To Login" severity="secondary" icon="pi pi-arrow-left" />
                         </div>
                     </ng-template>
                 </p-stepperPanel>
