--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -9,7 +9,7 @@
 
         <div>
             <p-stepper [linear]="true">
-                <p-stepperPanel header="Header I">
+                <p-stepperPanel header="Mobile No">
                     <ng-template pTemplate="content" let-nextCallback="nextCallback">
                         <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
                             <div class="text-center mt-3 mb-3 text-xl font-semibold">Enter your registered mobile no</div>
@@ -23,7 +23,7 @@
                         </div>
                     </ng-template>
                 </p-stepperPanel>
-                <p-stepperPanel header="Header II">
+                <p-stepperPanel header="Authenticate">
                     <ng-template pTemplate="content" let-prevCallback="prevCallback" let-nextCallback="nextCallback" let-index="index">
                         <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
                             <div class=" text-center font-bold text-xl mb-2">Authenticate Your Account</div>
@@ -53,7 +53,7 @@
                         </div>
                     </ng-template>
                 </p-stepperPanel>
-                <p-stepperPanel header="Header III">
+                <p-stepperPanel header="New Password">
                     <ng-template pTemplate="content" let-nextCallback="nextCallback" let-index="index">
                         <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
                             <div class="text-center mt-3 mb-3 text-xl font-semibold">Password</div>
@@ -79,7 +79,7 @@
                         </div>
                     </ng-template>
                 </p-stepperPanel>
-                <p-stepperPanel header="Header IV">
+                <p-stepperPanel header="Successful">
                     <ng-template pTemplate="content">
                         <div class="flex flex-column gap-2 mx-auto" style="min-height: 16rem; max-width: 24rem">
                             <div class="text-center mt-3 mb-3 text-xl font-semibold">Password Reset successfully</div>
